--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "git",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"index.html"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dileep519/Weather.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
